Moved from 4-7 to 3-6 and added created by and fixed a small bug with the error display

--- a/trailr/app/views/trails/_timeline.html.erb
+++ b/trailr/app/views/trails/_timeline.html.erb
@@ -76,7 +76,7 @@
 				$source
 			</div>                   
 			<div class="image">      
-				$image
+				$img_src
 			</div>                   
 			<div class="date">       
 				$date
