--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -42,6 +42,12 @@
 	<div id="trail_subheading">
 		Created on <b><%= @trail.created_at.strftime("%B %d, %Y at %I:%M%p") %></b>
 		&nbsp; | &nbsp; Views <b><%= @trail.viewcount %></b>
+		
+		<% if @trail.user %>
+			&nbsp; | &nbsp; Created by	<b><%= @trail.user.handle %></b>
+		<% end %>
+		
+
 	</div>
 	
 </div>
