--- a/trailr/public/stylesheets/new.css
+++ b/trailr/public/stylesheets/new.css
@@ -18,11 +18,14 @@
 }
 
 #buttons {
+	/*
 	border-top:1px solid #888;
-	
 	padding-top:25px;
+	*/
+	
 	padding-bottom:25px;
-	margin-top:30px;	
+	margin-top:30px;
+		
 	
 }
 
