--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -255,7 +255,7 @@
 	width:100%;
 	bottom:0px;
 	height:60px;
-	
+	z-index:0;
 	text-align:center;
 	font-family:Helvetica, Arial, Sans-Serif;
 	font-size:11px;
