--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -64,8 +64,8 @@
 							<%# link_to image_tag("logo2.png", :border=>0), :controller => 'home', :action => 'index' %>							
 							<%# link_to image_tag("logo3.png", :border=>0), :controller => 'home', :action => 'index' %>							
 							<%= link_to image_tag("logo4.png", :border=>0, :height => 45), :controller => 'home', :action => 'index' %>								
-							<span style="position:absolute;top:40px;/*left:7px;*/left:54px;font-size:12px">
-								share your story	
+							<span style="position:absolute;top:40px;/*left:7px;*/left:14px;font-size:12px">
+								Everybody is a storyteller	
 							</span>
 							
 						</div>
