--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -8,6 +8,7 @@
 	<%# stylesheet_link_tag "hoverline" %>		
 	<%# stylesheet_link_tag "timeline" %>		
 	<%= stylesheet_link_tag "timeline" %>			
+	<%= stylesheet_link_tag "show" %>
 <% end %>
 
 <% content_for :javascripts do %>
@@ -38,6 +39,10 @@
 		
 	</div>
 	
+	
+	<div id="edit">
+		<%= button_to "Edit", {:controller => "trails", :action => "edit", :id => @trail.id}, {:class => "trail_button"} %>
+	</div>
 	<h2><%= @trail.caption %></h2>
 	<div id="trail_subheading">
 		Created on <b><%= @trail.created_at.strftime("%B %d, %Y at %I:%M%p") %></b>
@@ -59,14 +64,16 @@
 
 </div>
 
-<form name="inputs">
+
+
 
 <div id="urlbox">
 	<input name="embed" value='<iframe frameborder="0" width="600" height="235" style="float:left;width:600px;height:235px;border:0px solid #808080" src="<%= url_for :controller => "trails", :action => "embed", :id => @trail.id, :only_path => false %>"></iframe>' 
-	style="width:200px; float:right; margin-right:200px;" onclick="javascript:document.inputs.embed.focus();document.inputs.embed.select();">
+	style="width:200px; float:right; margin-right:200px;" onclick="this.focus();this.select();">
 	<span style="float:right; margin-right:5px; font-weight:bold">Embed</span>
-	<input name="url" value="<%= url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>" onclick="javascript:document.inputs.url.focus();document.inputs.url.select();" style="width:200px; float:right;margin-right:50px;">
+	<input name="url" value="<%= url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>" onclick="this.focus();this.select();" style="width:200px; float:right;margin-right:50px;">
 	<span style="float:right;margin-right:5px; font-weight:bold;">URL</span>
 </div>
-</form>
+
+
 <div class="clear">
