--- a/trailr/public/stylesheets/new.css
+++ b/trailr/public/stylesheets/new.css
@@ -21,10 +21,12 @@
 	/*
 	border-top:1px solid #888;
 	padding-top:25px;
+	margin-top:30px;
 	*/
+	float:right;
 	
 	padding-bottom:25px;
-	margin-top:30px;
+	
 		
 	
 }
