--- a/trailr/app/views/trails/_timeline.html.erb
+++ b/trailr/app/views/trails/_timeline.html.erb
@@ -30,9 +30,7 @@
 	</div>
 
 <% end %>
-
 	<div class="back">Back</div>
-
 	<div class="meta">
 		<!--
 		<div class="headline">
@@ -43,8 +41,9 @@
 		</div>
 		-->
 		<ul>
-			<li><a href="#">Show timelines containing this link</a></li>
-			<li><a href="#">Start new timeline from here</a></li>
+			<li>Link: <span id="fullLink">url</span></li>
+			<li id="searchLink"><a id="showURL" style="cursor:pointer">Show timelines containing this link</a></li>
+			<!--<li id="startLink"><%= link_to "Start new timeline from here", :controller => "trails", :action => "create", :query => "url" %></li>-->
 		</ul>
 	</div>
 	<div class="meta_callout">&nbsp;</div>
@@ -57,7 +56,6 @@
 	
 	<div id="scale">&nbsp;</div>
 </div>
-
 
 <pre id="add" class="template">
 	<div class="$class">					 
