--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -56,6 +56,9 @@
 
 	<%= render :partial => "timeline", :locals => { :noedit => true } %>
 
+<% form_tag({:controller => "search", :action => "results"}, :id => 'searchURLForm' )  do %>
+	<input id="searchURL" type="hidden" name="query" value="lala" id="search_box" />
+<% end %>
 
 </div>
 
