--- a/trailr/app/views/trails/embed.html.erb
+++ b/trailr/app/views/trails/embed.html.erb
@@ -1,51 +1,60 @@
-<%= stylesheet_link_tag "embed" %>			
-<%= stylesheet_link_tag "timeline" %>			
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<%= default_javascript %>
+<html>
+	<head>
+	<meta http-equiv="x-ua-compatible" content="IE=8">
+		
+	<%= stylesheet_link_tag "embed" %>			
+	<%= stylesheet_link_tag "timeline" %>			
 
-<%= javascript_include_tag "timeline.js" %>
-<%= javascript_include_tag "jquery.autoellipsis.js" %>
-<%= javascript_include_tag "jquery.create.js" %>
-<%= javascript_include_tag "jquery.easing.1.3.js" %>
-<%= javascript_include_tag "jquery.mousewheel.js" %>
+	<%= default_javascript %>
+
+	<%= javascript_include_tag "timeline.js" %>
+	<%= javascript_include_tag "jquery.autoellipsis.js" %>
+	<%= javascript_include_tag "jquery.create.js" %>
+	<%= javascript_include_tag "jquery.easing.1.3.js" %>
+	<%= javascript_include_tag "jquery.mousewheel.js" %>
 
 		
-<script type="text/javascript" charset="utf-8">
+	<script type="text/javascript" charset="utf-8">
 
-	meta_show_callback = function () {
-		$(".meta .headline").autoEllipsis();
-	}
+		meta_show_callback = function () {
+			$(".meta .headline").autoEllipsis();
+		}
 
-	$(function() {
-		$("#caption").autoEllipsis();
-		timeline.show_meta = false;
-		timeline.init(<%= @articles.to_json %>);
+		$(function() {
+			$("#caption").autoEllipsis();
+			timeline.show_meta = false;
+			timeline.init(<%= @articles.to_json %>);
 		
-	});
+		});
 
-</script>
+	</script>
 
-<body id="" onload="">
+	</head>
+
+	<body id="" onload="">
 	
-	<!--
-	<div id="logo">
-		<a href="<%# url_for :controller => "home", :action => "index", :only_path => false %>">
-			<%# image_tag "logo_black.png", :width => "110" %>
-		</a>
-	</div>
-	-->
-	<div id="actions">
+		<!--
+		<div id="logo">
+			<a href="<%# url_for :controller => "home", :action => "index", :only_path => false %>">
+				<%# image_tag "logo_black.png", :width => "110" %>
+			</a>
+		</div>
+		-->
+		<div id="actions">
 		
-	</div>
+		</div>
 	
 
-	<% url = url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>
-	<a href="<%= url %>" onclick="window.open('<%= url %>'); return false;" target="_blank"><h3 id="caption"><%= @trail.caption %></h3></a>
-	<div style="">
+		<% url = url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>
+		<a href="<%= url %>" onclick="window.open('<%= url %>'); return false;" target="_blank"><h3 id="caption"><%= @trail.caption %></h3></a>
+		<div style="">
 
-	<%= render :partial => "timeline", :locals => { :noedit => true } %>
+		<%= render :partial => "timeline", :locals => { :noedit => true } %>
 
-	</div>
+		</div>
 	
-</body>
-
+	</body>
+</html>
