--- a/trailr/public/stylesheets/layout.css
+++ b/trailr/public/stylesheets/layout.css
@@ -49,11 +49,11 @@
 	padding:0px 15px;
 	
 	position:absolute;
-	height:50px;
-	
-	
 	top:25px;
 	right:0px;
+
+	height:50px;
+
 	background-color:#454545;
 	
 	
@@ -102,17 +102,18 @@
 
 
 #search {
-	position:relative;
-	top:10px;
-	top:8px;
+	position:relative;	
+	top:13px;
 	float:right;
 }
 
+
 #search_button {
-	position:relative;
-	top:2px;
+
+	display:inline-block;
+	float:right;
 	width:25px;
-	height:24px;
+	height:25px;
 	border:1px solid gray;
 	background-color:#F5F5F5;
 	background-image:url("../images/search.png");
@@ -121,16 +122,15 @@
 }
 
 #search_box {
+		
+	float:right;
 
-	position:relative;
-	top:6px;
 	width:200px;
-	/*height:30px;*/
+	height:17px;
+	padding:3px;
 	font-size:13px;
-	padding-top:3px;
-	padding-bottom:4px;
-	padding-left:3px;
-	padding-right:3px;
+
+
 	font-family: "Helvetica", Arial, sans-serif;
 	border:1px solid gray;
 }
