--- a/trailr/app/views/user/account.html.erb
+++ b/trailr/app/views/user/account.html.erb
@@ -4,7 +4,9 @@
 
 <% content_for :stylesheets do %>	
 	<%= stylesheet_link_tag "form" %>	
-	<%= stylesheet_link_tag "account" %>	
+	<%= stylesheet_link_tag "signon" %>	
+	<%= stylesheet_link_tag "account" %>		
+	
 <% end %>
 
 
@@ -27,45 +29,46 @@
 	</div>
 	
 	<% if current_user %>
-	<div class="left" style="margin-bottom:-2000px;padding-bottom:2000px">
+	<div class="left">
 		<h2>Account Information</h2>
 		
-		<% form_tag :controller => :user, :action => :process_edit do %>
+		<%# form_tag :controller => :user, :action => :process_edit do %>
 			
-			<fieldset>	
-				<legend>General Information</legend>
-			<p>
-				<label>Username</label>
-				<%= text_field :user, :handle %>
-				<span class="clear"></span>
+		<div class="account_form" style="border:1px solid #ccc">
+				
+			<p class="row">
+				<label class="label">Username</label>
+				<%= text_field :user, :handle, :class => "content" %>
+				<br>
 			</p>
 
-			<p>
-				<label>Email</label>
-				<%= text_field :user, :email %>
-				<span class="clear"></span>
+			<p class="row">
+				<label class="label">Email</label>
+				<%= text_field :user, :email, :class => "content" %>
+				<br>
 			</p>
 			
-			<p>
-				<label>New Password</label>
-				<%= password_field_tag :password, {}, :size => 30 %>
-				<span class="clear"></span>
+			<p class="row">
+				<label class="label">New Password</label>
+				<%= password_field_tag :password, {}, :size => 30, :class => "content" %>
+				<br>
 			</p>
 
-			<p>
-				<label>Repeat Password</label>
-				<%= password_field_tag :password2, {}, :size => 30 %>
-				<span class="clear"></span>
+			<p class="row">
+				<label class="label">Repeat Password</label>
+				<%= password_field_tag :password2, {}, :size => 30, :class => "content" %>
+				<br>
 			</p>
 			
-			<div class="input">
-				<%= submit_tag "Save Changes" %>				
-			</div>
+			<p class="row" style="text-align:center;">
+				<%= submit_tag "Save Changes", :class => "trail_button" %>
+				<br>				
+			</p>
 			
-			</fieldset>		
+		</div>		
 			
 				
-		<% end %>
+		<%# end %>
 
 	</div>
 	<% end %>
