--- a/trailr/public/stylesheets/signon.css
+++ b/trailr/public/stylesheets/signon.css
@@ -4,12 +4,59 @@
 	width:440px;
 }
 
+.login .left {
+	float:left;
+	width:440px;
+}
+
+.account .left {
+	float:left;
+	width:440px;
+}
+
 .login input {
-	float:right;
-	margin-bottom:25px;
+	/*float:right;*/
+	/*margin-bottom:25px;*/
 }
 
 .login p
 {
 	padding:25px 10px 0px 10px;
+}
+
+
+
+
+.account_form .row {
+	clear:both;
+	font-size:12px;
+	color:#222;
+	
+	margin-top:15px;
+	margin-bottom:20px;
+	
+	padding:0px;
+}
+
+.account_form .row .label {
+	font-size:12px;
+	width:125px;
+	text-align:right;
+	float:left;
+	font-weight:bold;
+	padding-right:5px;
+}
+
+.account_form .row .content {
+	margin:0px;
+	margin-left:5px;
+	float:left;
+	font-size:12px;
+	
+}
+
+
+.account_form .row br {
+	height:1px;
+	clear:both;
 }
