Added the new tag lines to the homepage

--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -18,8 +18,12 @@
 <% end %>
 
 
+<div id="linehive_description">
+	<h2>LineHive lets anybody tell mini-stories.</h2>
+	<h3>Add web links, we create a timeline for you, you share your insights with the world</h3>	
+</div>
 
-<h2>Featured Timelines</h2>
+
 <div class="space_10"></div>
 <fieldset>
 	<div class="small_columns">
