Updated the site with a new tag line and fixed a button bug on the static pages

--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
 
 <div id="linehive_description">
 	<h2>LineHive lets anybody tell mini-stories.</h2>
-	<h3>Add web links, we create a timeline for you, you share your insights with the world</h3>	
+	<h3>You collect links and we turn them into beautiful timelines to share with the world.</h3>	
 </div>
 
 
