--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -201,7 +201,7 @@
 		</div>
 		<div class="sidecol">
 			<div class="round_box" style="margin-top:15px">
-				Type or paste in as many URLs as you want and hit <b>Enter</b> to add them to your trail.
+				Type or paste in as many URLs as you want and hit <b>Enter</b> to add them to your timeline.
 			</div>
 		</div>
 		<div class="clear"></div>
