--- a/trailr/public/stylesheets/global.css
+++ b/trailr/public/stylesheets/global.css
@@ -189,6 +189,23 @@ br {
 }
 
 
+.trail_button {
+	
+	font-size:13px;
+	color:#222222;
+	font-family: "Helvetica", Arial, sans-serif;
+	font-weight:bold;
+	
+	background-color:transparent;
+	background-image:url("../images/button_background_up.png");
+	width:118px;
+	height:36px;
+	border:none;
+	
+}
+
+
+
 .error {
 	padding:10px;
 	margin-top:5px;
