Fixed a stlesheet error that cuased things to mess up in create and also fixed UI issues with firefox.

--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -55,6 +55,7 @@
 		console.log(text);
 		$("#loader").show();
 		
+		$("#urls").val("");
 		
 		jQuery.ajax({
         type: "POST",
@@ -78,7 +79,6 @@
         }    
     });
     
-		$("#urls").text("");
 		
 	}
 	
