--- a/trailr/public/stylesheets/form.css
+++ b/trailr/public/stylesheets/form.css
@@ -31,7 +31,7 @@
 }
 
 
-/* Moved to layout.css since it is now global..essentially...
+/* Moved to layout.css since it is now global..essentially...*/
 .trail_button {
 	
 	
