--- a/trailr/public/stylesheets/global.css
+++ b/trailr/public/stylesheets/global.css
@@ -204,7 +204,14 @@ br {
 	
 }
 
+.notice {
+	padding:10px;
+	margin-top:5px;
+	margin-bottom:25px;
+	background-color: rgb(255, 255, 221);
+	border: 2px solid rgb(255, 204, 0);
 
+}
 
 .error {
 	padding:10px;
