--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -49,8 +49,12 @@
 		
 		<div class="actions">
 			<% if @trail.user && @trail.user.id == current_user %>
-				This is your timeline - <%= link_to "Edit", :controller => "trails", :action => "edit", :id => @trail.id %>
+				This is your timeline - <%= link_to "Edit", :controller => "trails", :action => "edit", :id => @trail.id %> &nbsp; |&nbsp;
 			<% end %>
+			
+			Tweak this timeline - <%= link_to "Copy + Edit", :controller => "trails", :action => "clone", :id => @trail.id %>
+
+
 		</div>
 		
 		Created on <b><%= @trail.created_at.strftime("%B %d, %Y at %I:%M%p") %></b>
